--- a/App_LUMINOVA/templates/deposito/deposito.html
+++ b/App_LUMINOVA/templates/deposito/deposito.html
@@ -152,7 +152,7 @@
                                     data-lote-id="{{ lote.id }}"
                                     data-lote-info="lote de {{lote.cantidad}} x {{lote.producto.descripcion}}"
                                     title="Enviar lote de {{lote.cantidad}} x {{lote.producto.descripcion}}">
-                                <i class="bi bi-truck me-1"></i> Enviar
+                                 Enviar
                             </button>
                         </form>
                     </td>
@@ -186,7 +186,7 @@
                     <td class="text-white text-center fw-bold text-danger">{{ item.insumo.stock }}</td>
                     <td class="text-white text-center">
                         <button class="btn btn-success btn-sm" title="Gestionar compra para {{ item.insumo.descripcion }}">
-                            <i class="bi bi-cart-plus-fill"></i>Comprar
+                            Comprar
                         </button>
                     </td>
                 </tr>
