Se corriguen paths de redireccionamiento

--- a/App_LUMINOVA/templates/compras/compras_seleccionar_proveedor.html
+++ b/App_LUMINOVA/templates/compras/compras_seleccionar_proveedor.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="mt-3 d-flex justify-content-end">
-                    <a href="{% url 'App_LUMINOVA:deposito_view' %}" class="btn btn-secondary me-2">Cancelar</a>
+                    <a href="{% url 'App_LUMINOVA:compras_desglose' %}" class="btn btn-secondary me-2">Cancelar</a>
                     <button type="submit" class="btn btn-primary">
                         Continuar y Crear OC
                     </button>
