Se mejora lógica e interfaz de Auditoría de Accesos al sistema

--- a/App_LUMINOVA/templates/shared/header.html
+++ b/App_LUMINOVA/templates/shared/header.html
@@ -33,7 +33,7 @@
                             </svg>
                             <span class="d-none d-lg-inline align-self-center me-2  fw-bold">Usuario Administrador</span>
                         </span>
-                        <a class="btn btn-outline-primary btn-sm align-self-center" style="white-space: nowrap;" href="{% url 'App_LUMINOVA:login' %}">Cerrar sesión</a>
+                        <a class="btn btn-outline-primary btn-sm align-self-center" style="white-space: nowrap;" href="{% url 'App_LUMINOVA:logout' %}">Cerrar sesión</a>
                     </div>
                 </div>
             </div>
