Se añade bandera con modal para mostrar reportes de OPs con proebelmas

--- a/App_LUMINOVA/templates/produccion/produccion_lista_op.html
+++ b/App_LUMINOVA/templates/produccion/produccion_lista_op.html
@@ -121,5 +121,13 @@
     </div>
     {% endif %}
 {% endfor %}
+<div class="mt-3 small text-muted">
+    <p class="mb-1">
+        <i class="bi bi-box-seam-fill text-success"></i>: Insumos recibidos, lista para iniciar producción.
+    </p>
+    <p class="mb-1">
+        <i class="bi bi-exclamation-triangle-fill text-danger"></i>: La OP tiene uno o más problemas reportados y abiertos.
+    </p>
+</div>
 
 {% endblock %}
