--- a/App_LUMINOVA/templates/deposito/deposito.html
+++ b/App_LUMINOVA/templates/deposito/deposito.html
@@ -200,6 +200,7 @@
             </tbody>
 
             {# Tabla 2: Insumos que YA ESTÁN PEDIDOS #}
+            {# ... GESTIONAR RECEPCIÓN DE INSUSMOS #}
             <thead>
                 <tr style="border-top: 3px solid white;">
                     <th colspan="3" class="bg-primary text-white text-center pt-3" style="padding-left: 0px;">
