Se ajusta color del nombre de usuario

--- a/App_LUMINOVA/templates/shared/header.html
+++ b/App_LUMINOVA/templates/shared/header.html
@@ -54,7 +54,7 @@
                         <div class="nav-item d-flex align-items-center">
                             <!-- Se cambia a text-primary -->
                              <i class="bi bi-person-circle fs-5 text-primary"></i>
-                             <span class="ms-2 fw-bold text-dark">{{ user.first_name|default:user.username|capfirst }}</span>
+                             <span class="ms-2 fw-bold text-primary">{{ user.first_name|default:user.username|capfirst }}</span>
                         </div>
                          
                         <div class="nav-item ms-3">
