--- a/App_LUMINOVA/templates/admin/auditoria.html
+++ b/App_LUMINOVA/templates/admin/auditoria.html
@@ -30,7 +30,7 @@
     <table class="table table-hover align-middle">
         <thead class="color-thead">
             <tr>
-                <th style="width: 5%;"></th>
+                <th style="width: 5%; background-color: #014BAC"></th>
                 <th style="background-color: #014BAC; color: white;">Usuario</th>
                 <th style="background-color: #014BAC; color: white;">Acción</th>
                 <th style="background-color: #014BAC; color: white;">Fecha y Hora</th>
@@ -85,5 +85,5 @@
             <li class="page-item"><a class="page-link" href="?page={{ auditorias.paginator.num_pages }}">Última »</a></li>
         {% endif %}
     </ul>
-</nav> 
+</nav>
 {% endblock %}
