Correccion de mas detalles

--- a/App_LUMINOVA/templates/admin/roles_permisos.html
+++ b/App_LUMINOVA/templates/admin/roles_permisos.html
@@ -17,14 +17,14 @@
     <table class="table table-striped" id="tablaRoles">
         <thead class="table-light">
             <tr>
-                <th class="align-middle color-thead">ID</th>
-                <th class="align-middle color-thead">Rol(Grupo)</th>
-                <th class="align-middle color-thead">Descripción</th>
-                <th class="align-middle color-thead">Permisos</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">ID</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Rol(Grupo)</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Descripción</th>
+                <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Permisos</th>
                 {# Estas columnas eran más descriptivas que funcionales, puedes mantenerlas o quitarlas #}
                 {# <th>Módulos Asignados</th> #}
                 {# <th>Nivel de Acceso</th> #}
-                <th class="align-middle color-thead" style="width: 150px;">Acciones</th>
+                <th class="align-middle color-thead" style="width: 150px; background-color: #014BAC; color: white;">Acciones</th>
             </tr>
         </thead>
         <tbody>
