--- a/App_LUMINOVA/templates/admin/usuarios.html
+++ b/App_LUMINOVA/templates/admin/usuarios.html
@@ -15,12 +15,12 @@
         <table class="table table-striped">
             <thead class="table-light">
                 <tr>
-                    <th class="align-middle color-thead">ID</th>
-                    <th class="align-middle color-thead">Nombre de Usuario</th>
-                    <th class="align-middle color-thead">Email</th>
-                    <th class="align-middle color-thead">Rol</th>
-                    <th class="align-middle color-thead">Estado</th>
-                    <th class="align-middle color-thead">Acciones</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">ID</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Nombre de Usuario</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Email</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Rol</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Estado</th>
+                    <th class="align-middle color-thead" style="background-color: #014BAC; color: white;">Acciones</th>
                 </tr>
             </thead>
             <tbody>
