--- a/App_LUMINOVA/templates/produccion/produccion_lista_op.html
+++ b/App_LUMINOVA/templates/produccion/produccion_lista_op.html
@@ -28,7 +28,7 @@
 </ul>
 
 <div class="tab-content" id="opTabContent">
-  
+
   <!-- Contenido de la Pestaña de OPs Activas -->
   <div class="tab-pane fade show active" id="activas-tab-pane" role="tabpanel">
     <div class="table-responsive mt-3">
@@ -69,19 +69,19 @@
         </table>
     </div>
   </div>
-  
+
   <!-- Contenido de la Pestaña de OPs Finalizadas -->
   <div class="tab-pane fade" id="finalizadas-tab-pane" role="tabpanel">
     <div class="table-responsive mt-3">
         <table class="table table-sm table-hover align-middle">
             <thead class="table-light">
                 <tr>
-                    <th>N° OP</th>
-                    <th>Producto</th>
-                    <th class="text-center">Cant.</th>
-                    <th>Fecha Finalización</th>
-                    <th>Estado</th>
-                    <th class="text-center">Acciones</th>
+                    <th style="background-color: #014BAC; color: white;">N° OP</th>
+                    <th style="background-color: #014BAC; color: white;">Producto</th>
+                    <th class="text-center" style="background-color: #014BAC; color: white;">Cant.</th>
+                    <th style="background-color: #014BAC; color: white;">Fecha Finalización</th>
+                    <th style="background-color: #014BAC; color: white;">Estado</th>
+                    <th class="text-center" style="background-color: #014BAC; color: white;">Acciones</th>
                 </tr>
             </thead>
             <tbody>
